<resources>
    <string name="app_name">GiftChoice</string>
    <string name="title_name">Person</string>
    <string name="there_are_no_created_people">There are no created people yet</string>
    <string name="user_list_is_empty">User list is empty</string>
    <string name="name_girl">Person name</string>
    <string name="day_person">10 april</string>
    <string name="text_test">Test</string>
    <string name="text_toolbar_birthday">Specify date of birth</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Ok</string>
    <string name="title_gift">Gift</string>
    <string name="person_name">Person name</string>
    <string name="person_type">Person type</string>
    <string name="person_birthday">Person birthday</string>
    <string name="text_title_add_person">Enter user details</string>
    <string name="number_dialog">dialog</string>
    <string name="button_start_test">Start test</string>
    <string name="type_man">Man</string>
    <string name="type_women">Women</string>
    <string name="type_child">Child</string>
    <string name="text_toolbar_type">Type person</string>
    <string name="error_fill_on_the_field">Please, fill on the all field</string>
    <string name="error_сould_not_add_user_to_database">Could not add user to database</string>
    <string name="error_reading_user">Error reading users</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="open_sans">fonts/OpenSans-Light.ttf</string>
    <string name="ID">id</string>
    <string-array name="type">
        <item name="man">Man</item>
        <item name="women">Women</item>
        <item name="child">Child</item>
    </string-array>

    <string-array name="pictures_for_questions">
        <item>@drawable/ic_valentines</item>
        <item>@drawable/ic_sunglasses</item>
        <item>@drawable/ic_pallet_and_brushes</item>
        <item>@drawable/ic_books</item>
        <item>@drawable/ic_teddy_bear</item>
        <item>@drawable/ic_bicycle</item>
        <item>@drawable/ic_cosmetics</item>
        <item>@drawable/ic_long_sleeves_t_shirt</item>
        <item>@drawable/ic_inflatable_boat</item>
    </string-array>

    <string-array name="texts_for_questions">
        <item>Do you wear jewelry?</item>
        <item>Do you wear accessories?</item>
        <item>Do you want to be creative?</item>
        <item>Do you read books?</item>
        <item>Would you like to receive a toy as a gift?</item>
        <item>Do you like sports?</item>
        <item>Do you need something from cosmetics?</item>
        <item>Do you want something from clothes?</item>
        <item>Are you interested in hunting or fishing?</item>
    </string-array>

    <string-array name="hashtags_for_questions">
        <item>jewelry</item>
        <item>accessories</item>
        <item>creative</item>
        <item>book</item>
        <item>gift</item>
        <item>sports</item>
        <item>cosmetics</item>
        <item>clothes</item>
        <item>fishing</item>
    </string-array>

    <plurals name="review_day_string">
        <item quantity="one">%d день</item>
        <item quantity="few">%d дня</item>
        <item quantity="many">%d дней</item>
        <item quantity="other">%d дней</item>
    </plurals>

</resources>
