<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative_layout_recycler_person"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="@dimen/cardViewMargin"
            android:layout_marginRight="@dimen/cardViewMargin">

            <ImageView
                android:id="@+id/image_card_view_person"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_man" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"

                android:layout_toRightOf="@id/image_card_view_person">


                <TextView
                    android:id="@+id/text_view_card_person_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_girl"
                    android:textSize="@dimen/nameSize" />

                <TextView
                    android:id="@+id/text_view_card_person_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_card_person_name"
                    android:text="@string/day_person"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextOpacity"
                    android:textSize="@dimen/secondTextSize" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_card_person_test"
                android:layout_width="@dimen/button_card_width_test"
                android:layout_height="@dimen/button_card_height_test"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorAccent"
                android:text="@string/text_test"
                android:textColor="@color/colorWhite"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_card_person_gift"
                android:layout_width="@dimen/buttonCardWidthGift"
                android:layout_height="@dimen/buttonCardHeightGift"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_gift" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
</android.support.v7.widget.LinearLayoutCompat>